# palindrome

./: CMakeLists.txt  README.md
